Add shortestPath algo